[gd_scene load_steps=13 format=3 uid="uid://icpcls4hapc6"]

[ext_resource type="Script" uid="uid://bdff00qk0h0hg" path="res://Scenes/GreenSmile_area2D.gd" id="1_7l1ug"]
[ext_resource type="Texture2D" uid="uid://bog2pj436cxmm" path="res://Assets/Enemy/slime_purple.png" id="2_7l1ug"]
[ext_resource type="AudioStream" uid="uid://cwfw7htw1dyej" path="res://Assets/Sounds/Kill Enemy 8 bit - Sound Effect HD - Movie Sound FX-[AudioTrimmer.com].mp3" id="3_j6llk"]
[ext_resource type="AudioStream" uid="uid://c608q67domik7" path="res://Assets/Sounds/8 Bit Death Sound Effect - Sound Effect Database.mp3" id="4_f7vkv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j6llk"]
atlas = ExtResource("2_7l1ug")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b30qx"]
atlas = ExtResource("2_7l1ug")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykbq7"]
atlas = ExtResource("2_7l1ug")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6q40"]
atlas = ExtResource("2_7l1ug")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsc55"]
atlas = ExtResource("2_7l1ug")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h2om"]
atlas = ExtResource("2_7l1ug")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1aq1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6llk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b30qx")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykbq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6q40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsc55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h2om")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwvw3"]
size = Vector2(10, 11)

[node name="RedSmile_E" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7l1ug")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1aq1e")
animation = &"hit"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_vwvw3")

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(13, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(-13, 0)

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j6llk")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f7vkv")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
